# ray_trace

./: Cargo.toml  README.md  earth.ppm  out.ppm
src/: aabb.rs  aarect.rs  bvh.rs  bxdf_type.rs  camera.rs  color.rs  cube.rs  efloat.rs  film.rs  filter.rs  hittable.rs  image_io.rs  integrator.rs  interaction.rs  lib.rs  light.rs  main.rs  material.rs  medium.rs  onb.rs  pbrt.rs  pdf.rs  perlin.rs  point.rs  primitive.rs  quaternion.rs  random.rs  ray.rs  reflection.rs  rotate.rs  sampler.rs  sampling.rs  scene.rs  scenes.rs  shape.rs  spectrum.rs  sphere.rs  texture.rs  transforms.rs  utils.rs  (+1 more)
src/core/: efloat.rs  film.rs  math.rs  pbrt.rs  quaternion.rs  spectrum.rs  transforms.rs
src/geometry/: bounds.rs  mod.rs  ray.rs
src/integrators/: whitted.rs
src/samplers/: mod.rs  stratified.rs  uniform.rs
src/shapes/: sphere.rs
src_old/: aarect.rs  camera.rs  color.rs  cube.rs  hittable.rs  lib.rs  main.rs  material.rs  medium.rs  pdf.rs  perlin.rs  point.rs  ray.rs  scenes.rs  sphere.rs  texture.rs  vector.rs
