[package]
name = "ray_trace"
version = "0.1.0"
authors = ["jlingohr <johannlingohr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
image = "*"
rayon = "*"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
nalgebra = "*"
approx = "*"
hexf = "0.1.0"
bitflags = '*'